--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "css": "node-sass --output-style expanded --indent-type tab --indent-width 1 sass/style.scss -o .",
     "postcss": "postcss style.css --no-map -u autoprefixer -o style.css --autoprefixer.browsers=\"last 2 versions, ie >= 10\"",
     "watch": "node-sass --output-style expanded --indent-type tab --indent-width 1 -w sass -r -o ."
+  },
+  "dependencies": {
+    "node-sass": "^4.14.1"
   }
 }
